# dragon-dice

./: .gitignore  .pylintrc  BETTER_QUALITY_TESTS_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  EXTRACTED_LOGIC_SUMMARY.md  README.md  STRICT_FIELD_ACCESSOR_ANALYSIS.md  app_data_model.py  constants.py  demo_dragon_selection.py  dragon_dice.py  engine.py  fix_comprehensive_game_flows.py  fix_missing_allocated_points.py  fix_missing_unit_ids.py  fix_test_setup.py  layout.html  main_app.py  main_window.py  mypy.ini  names.txt  pyproject.toml  refactor.bat  requirements.txt  ruff.toml  test_mock_refactor_example.py
assets/: 02_introduction.md  03_basic_terms.md  08_setting_up_the_game.md  11_turn_sequence.md  15_terrains.md  17_dragons.md  21_species_abilities.md  27_rules_reference_die_roll_resolution.md  28_rules_reference_combination_rolls.md  28_rules_reference_modifiers.md  29_rules_reference_damage.md  29_rules_reference_monsters.md  29_rules_reference_up_to.md  30_rules_reference_promotion.md  31_special_action_icons.md  44_spells.md  54_dragonkin.md  59_items.md  62_eldarim_champions.md  94_credits.md  dragon_cards.html  dragon_dice_turn_counter.html  playmat.html  species_cards.html  spell_cards.html  spell_cards_template.html
components/: __init__.py  acting_army_widget.py  action_choice_widget.py  action_decision_widget.py  active_effects_widget.py  army_die_face_summary_widget.py  army_setup_widget.py  carousel.py  die_face_display_widget.py  dragon_selection_widget.py  error_dialog.py  help_panel_widget.py  maneuver_input_widget.py  melee_action_widget.py  (+9 more)
(+231 files in other folders)
